# study_libjit

./: README.md
libjit_base1/: CMakeLists.txt
libjit_base1/h7/: fib.c  imp.c  test_struct.c
libjit_base1/sample/: call_puts_from_jit.c  gcd_iter.c
